--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Brampton Website Design, Search Engine Optimization and Digital Marketing
+title: Brampton Web Design SEO PPC - Fivestar Media
 lang: en
 ref: home
 permalink: /home/
@@ -8,20 +8,20 @@ permalink: /home/
 <body>
 	{% include menu.html %}
 	<div class="bg home">
-		<h1 class="splash"><span>Results-driven Website Design,</span><span>Search Engine Optimization</span><span>and Digital Marketing to</span><span>Maximize Your Leads.</span></h1>
-		<h2 class="splash"><span>Increase brand perception.</span><span>Enhance user experience.</span><span>Grow your business.</span></h2>
+		<h1 class="splash"><span>Results-driven Website Design,</span><span>Search Engine Optimization</span><span>and Pay-per-click Marketing</span><span>to Maximize Your Leads.</span></h1>
+		<h2 class="splash"><span>Increase brand perception.</span><span>Generate maximum leads.</span><span>Grow your business.</span></h2>
 	</div>
 	<div class="banner">
-		<h2>We specialize in <span class="underline">Web Design</span> and make awesome, pixel-perfect websites, get them rank high with <span class="underline">Search Engine Optimization</span>, and increase traffic to them with clever <span class="underline">Digital Marketing</span>.</h2>
+		<h2>We specialize in <span class="underline">Website Design</span> and make awesome, functional, pixel-perfect websites. We also generate maximum leads by getting them to rank high in search engines through organic <span class="underline">Search Engine Optimization</span> and strategic advertisement using <span class="underline">Pay-per-click Marketing</span>.</h2>
 	</div>
 	<div class="body-container">
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
-				<h1 class="toUpper bold">Our Services</h1>
+				<h1>Our Services</h1>
 				<h3>At Fivestar Media, we are only successful if our clients are successful. We believe in carefully listening to our client's objectives, providing our professional feedback and then transforming your vision to reality with our specialized services.</h3>
 			</div>
 		</div>
-		<div class="row eqHeight">
+		<div class="row eqHeight spacer">
 			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
@@ -30,8 +30,8 @@ permalink: /home/
 						</a>
 					</div>
 					<div class="serviceText">
-						<p class="toUpper bold"><a href="{{ site.baseurl }}/website-design/">Website Development</a></p>
-						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the best impression.</a></p>
+						<p class="bold"><a href="{{ site.baseurl }}/website-design/">Website Design</a></p>
+						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p>
 					</div>
 				</div>
@@ -39,30 +39,38 @@ permalink: /home/
 			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
-						<a href="{{ site.baseurl }}/seo/">
+						<a href="{{ site.baseurl }}/search-engine-optimization-seo/">
 							<img class="circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
 						</a>
 					</div>
 					<div class="serviceText">
-						<p class="toUpper bold"><a href="{{ site.baseurl }}/seo/">Search Engine Optimization</a></p>
-						<p><a href="{{ site.baseurl }}/seo/">Make your site rank high in search engines to increase traffic to your website and generate more leads.</a></p>
-						<p class="serviceLink bold"><a href="{{ site.baseurl }}/seo/">Learn More</a></p>
+						<p class="bold"><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Search Engine Optimization</a></p>
+						<!-- <p><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Reach the top in search engines using organic SEO to increase traffic and generate more leads. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p> -->
+						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p>
+						<p class="serviceLink bold"><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Learn More</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
-						<a href="{{ site.baseurl }}/digital-marketing/">
+						<a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">
 							<img class="circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
 						</a>
 					</div>
 					<div class="serviceText">
-						<p class="toUpper bold"><a href="{{ site.baseurl }}/digital-marketing/">Digital Marketing</a></p>
-						<p><a href="{{ site.baseurl }}/digital-marketing/">Use social media marketing, email marketing and pay-per-click advertising to increase your leads.</a></p>
-						<p class="serviceLink bold"><a href="{{ site.baseurl }}/digital-marketing/">Learn More</a></p>
+						<p class="bold"><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Pay-per-click Marketing</a></p>
+						<!-- <p><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Use social media marketing, email marketing and pay-per-click advertising to increase your leads. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p> -->
+						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p>
+						<p class="serviceLink bold"><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Learn More</a></p>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12 serviceHeading">
+				<h1>Why Choose Us</h1>
+				<h3>At Fivestar Media, we are only successful if our clients are successful. We believe in carefully listening to our client's objectives, providing our professional feedback and then transforming your vision to reality with our specialized services.</h3>
 			</div>
 		</div>
 	</div>
