--- a/pay-per-click-ppc-marketing.html
+++ b/pay-per-click-ppc-marketing.html
@@ -1,80 +1,80 @@
 ---
 layout: page
-title: Brampton Website Design
+title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
 lang: en
-ref: website-design
-permalink: /website-design/
+ref: ppc
+permalink: /pay-per-click-ppc-marketing/
 ---
 <body>
 	{% include menu.html %}
-	<div class="jumbotron bg website-design">
-			<!-- <h1 class="splash"><span>To reach high,</span><span>you must be built</span><span>to reach higher.</span></h1>		 -->
+	<div class="jumbotron bg digital-marketing">
 		<!-- <h1 class="splash">Website Design</h1>
 		<h2 class="splash"><span>Your website is your company's</span><span>first impression, so make it.</span><span>the best.</span></h2> -->
 	</div>
-	<!-- <div class="banner">
-		<h2>We build the best websites.</h2>
-	</div> -->
+	<div class="banner">
+			<h2>We build the best websites.</h2>
+	</div>
 	<div class="body-container">
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
-				<h1>Website Design</h1>
-				<h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with relevant visuals. The website should work seamlessly across all devices, be easy to use, have a fast load time and be designed from the ground-up to rank well with search engines. All of our websites have the same, exceptional standard of quality to deliver the best user experince for your customers and be easy to maintain for you.</h3>
+				<h1>Pay-per-click Marketing</h1>
+				<h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time. At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals.</h3>
 				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
 			</div>
 		</div>
 		<div class="row eqHeight icons greybg">
 			<div class="col-xs-12 col-md-3">
-				<img src="{{ site.baseurl }}/images/responsive.png">
-				<h3>Responsive Design</h3>
+				<img src="{{ site.baseurl }}/images/no-contract.png">
+				<h3>No Contracts</h3>
 				<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/analytics.png">
-					<h3>Google Analytics</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
-			</div>
-			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/content.png">
-					<h3>Content Management</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
-			</div>
-			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/copyrighting.png">
-					<h3>Copyrighting</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
-			</div>
+				<img src="{{ site.baseurl }}/images/ppc-management.png">
+				<h3>PPC Management</h3>
+				<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 		</div>
-		<div class="row eqHeight icons greybg secondRow">
+		<div class="col-xs-12 col-md-3">
+				<img src="{{ site.baseurl }}/images/g.png">
+				<h3>Google AdWords</h3>
+				<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+		</div>
+		<div class="col-xs-12 col-md-3">
+				<img src="{{ site.baseurl }}/images/bing-ads.png">
+				<h3>Bing Ads</h3>
+				<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+		</div>
+			</div>
+			<div class="row eqHeight icons greybg secondRow">
+					<div class="col-xs-12 col-md-3">
+							<img src="{{ site.baseurl }}/images/keyword-research.png">
+							<h3>Keyword Research</h3>
+							<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+					</div>
+	
 				<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/secure.png">
-					<h3>Secure</h3>
+							<img src="{{ site.baseurl }}/images/a.png">
+							<h3>Advertising Strategy</h3>
+							<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+						</div>		
+				<div class="col-xs-12 col-md-3">
+					<img src="{{ site.baseurl }}/images/competitor-analysis.png">
+					<h3>Competitor Analysis</h3>
 					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/cloud.png">
-					<h3>Cloud Hosted</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
-			</div>
-			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/seo.png">
-					<h3>SEO Friendly</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
-			</div>
-			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/xml.png">
-					<h3>XML Sitemap</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
-			</div>
+				<img src="{{ site.baseurl }}/images/analytics.png">
+				<h3>Analytics Integration</h3>
+				<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
 		</div>
-		<div class="row">
-				<div class="col-xs-12 serviceHeading">
-					<h1>Website Design Packages</h1>
-					<h3>Whether you're a local startup or an established international leader, Fivestar's packages are designed to give you the edge over your competitors. We take our time to understand you and your goals to develop the best strategy for your online success. Your brand new, professional website will be up and running in as little as three weeks.</h3>
-					<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
-				</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 serviceHeading">
+			<h1>PPC Benefits</h1>
+			<h3>Whether you're a local startup or an established international leader, Fivestar's packages are designed to give you the edge over your competitors. We take our time to understand you and your goals to develop the best strategy for your online success. Your brand new, professional website will be up and running in as little as three weeks. </h3>
+			<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
 		</div>
-		<div class="row eqHeight">
+</div>	
+	<div class="row eqHeight">
 			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="featuresImg">
 					<img src="{{ site.baseurl }}/images/template.png">
@@ -82,7 +82,7 @@ permalink: /website-design/
 			</div>
 			<div class="col-xs-12 col-md-5 featuresPadding">
 				<div class="serviceDetail">
-					<h2>Template</h2>
+					<h2>1. Measurable</h2>
 					<h3>Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</h3>
 					<h3>All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</h3>
 				</div>
@@ -91,7 +91,7 @@ permalink: /website-design/
 		<div class="row eqHeight">
 			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="serviceDetail">
-					<h2>Template+</h2>
+					<h2>2. Cost Effective</h2>
 					<h3>Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</h3>
 					<h3>All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</h3>
 				</div>
@@ -110,7 +110,7 @@ permalink: /website-design/
 			</div>
 			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="serviceDetail">
-					<h2>Custom</h2>
+					<h2>3. Fast Results</h2>
 					<h3>Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</h3>
 					<h3>All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</h3>
 				</div>
@@ -119,7 +119,7 @@ permalink: /website-design/
 		<div class="row eqHeight">
 			<div class="col-xs-12 col-md-7 featuresPadding">
 				<div class="serviceDetail">
-					<h2>Enterprise</h2>
+					<h2>4. Maximum Relevance</h2>
 					<h3>Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</h3>
 					<h3>All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</h3>
 				</div>
@@ -130,16 +130,30 @@ permalink: /website-design/
 				</div>
 			</div>
 		</div>
+		<div class="row eqHeight">
+				<div class="col-xs-12 col-md-7 featuresPadding">
+					<div class="featuresImg">
+						<img src="{{ site.baseurl }}/images/template.png">
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-5 featuresPadding">
+					<div class="serviceDetail">
+						<h2>5. Highly Targeted</h2>
+						<h3>Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</h3>
+						<h3>All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</h3>
+					</div>
+				</div>
+			</div>
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
-				<h1>Website Design Pricing</h1>
-				<h3>Call us today at 416-464-6573 to learn more about our Website Design packages. You can also use our Contact Form or send us an email at info@fivestarmedia.com.</h3>
+					<h1>Pay-per-click Pricing</h1>
+					<h3>Call us today at 416-464-6573 to learn more about our Pay-per-click Marketing packages. You can also use our Contact Form or send us an email at info@fivestarmedia.com.</h3>
 			</div>
 		</div>
 		<div class="row eqHeight greybg featuresContainer">
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
-					<h2 class="bold">Template</h2>
+					<h2 class="bold">Basic</h2>
 					<h2 class="bold">$700</h2>
 					<li>ABC</li>
 					<li>ABC</li>
@@ -151,7 +165,7 @@ permalink: /website-design/
 			</div>
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
-					<h2 class="bold">Template+</h2>
+					<h2 class="bold">Aggressive</h2>
 					<h2 class="bold">$700</h2>
 					<li>ABC</li>
 					<li>ABC</li>
@@ -166,7 +180,7 @@ permalink: /website-design/
 			</div>
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
-					<h2 class="bold">Custom</h2>
+					<h2 class="bold">Market Leader</h2>
 					<h2 class="bold">$700</h2>
 					<li>ABC</li>
 					<li>ABC</li>
@@ -185,7 +199,7 @@ permalink: /website-design/
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
 					<h2 class="bold">Enterprise</h2>
-					<h2 class="bold">$5,000+</h2>
+					<h2 class="bold">$CALL</h2>
 					<li>ABC</li>
 					<li>ABC</li>
 					<li>ABC</li>
