--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@ permalink: /home/
 				<h3>At Fivestar Media, we are only successful if our clients are successful. We believe in carefully listening to our client's objectives, providing our professional feedback and then transforming your vision to reality with our specialized services.</h3>
 			</div>
 		</div>
-		<div class="row eqHeight spacer">
+		<div class="row eqHeight">
 			<div class="col-xs-12 col-md-4 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
@@ -68,7 +68,7 @@ permalink: /home/
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 serviceHeading">
+			<div class="col-xs-12 serviceHeading Why">
 				<h1>Why Choose Us</h1>
 				<h3>At Fivestar Media, we are only successful if our clients are successful. We believe in carefully listening to our client's objectives, providing our professional feedback and then transforming your vision to reality with our specialized services.</h3>
 			</div>
