--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Brampton Web Design SEO PPC - Fivestar Media
+title: Toronto Web Design SEO PPC - Fivestar Media
 lang: en
 ref: home
 permalink: /home/
@@ -31,7 +31,7 @@ permalink: /home/
 					</div>
 					<div class="serviceText">
 						<p class="bold"><a href="{{ site.baseurl }}/website-design/">Website Design</a></p>
-						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p>
+						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p>
 					</div>
 				</div>
@@ -46,7 +46,7 @@ permalink: /home/
 					<div class="serviceText">
 						<p class="bold"><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Search Engine Optimization</a></p>
 						<!-- <p><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Reach the top in search engines using organic SEO to increase traffic and generate more leads. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p> -->
-						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p>
+						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Learn More</a></p>
 					</div>
 				</div>
@@ -61,16 +61,60 @@ permalink: /home/
 					<div class="serviceText">
 						<p class="bold"><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Pay-per-click Marketing</a></p>
 						<!-- <p><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Use social media marketing, email marketing and pay-per-click advertising to increase your leads. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p> -->
-						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p>
+						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Learn More</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-xs-12 serviceHeading Why">
+		<div class="row Why">
+			<div class="col-xs-12 serviceHeading">
 				<h1>Why Choose Us</h1>
 				<h3>At Fivestar Media, we are only successful if our clients are successful. We believe in carefully listening to our client's objectives, providing our professional feedback and then transforming your vision to reality with our specialized services.</h3>
+			</div>
+		</div>
+		<div class="row eqHeight Why">
+			<div class="col-xs-12 col-md-4 serviceCols">
+				<div class="serviceContainer">
+					<div class="serviceIcon">
+						<!-- <a href="{{ site.baseurl }}/website-design/"> -->
+							<img class="circular--square" src="{{ site.baseurl }}/images/professional.jpg">
+						<!-- </a> -->
+					</div>
+					<div class="serviceText">
+						<p class="bold">Professional</p>
+						<p>Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</p>
+						<!-- <p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p> -->
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-4 serviceCols">
+				<div class="serviceContainer">
+					<div class="serviceIcon">
+						<!-- <a href="{{ site.baseurl }}/search-engine-optimization-seo/"> -->
+							<img class="circular--square" src="{{ site.baseurl }}/images/local.jpg">
+						<!-- </a> -->
+					</div>
+					<div class="serviceText">
+						<p class="bold">Local</p>
+						<p>Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</p>
+						<!-- <p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p> -->
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-4 serviceCols">
+				<div class="serviceContainer">
+					<div class="serviceIcon">
+						<!-- <a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/"> -->
+							<img class="circular--square" src="{{ site.baseurl }}/images/results.jpg">
+						<!-- </a> -->
+					</div>
+					<div class="serviceText">
+						<p class="bold">Results</p>
+						<p>Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</p>
+						<!-- <p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p> -->
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
