--- a/website-design.html
+++ b/website-design.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Brampton Website Design
+title: Toronto Web Design Development - Fivestar Media
 lang: en
 ref: website-design
 permalink: /website-design/
