--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@ permalink: /home/
 							<img class="circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
 						</a>
 					</div>
-					<div class="serviceText">
+					<div class="serviceText serviceSpace">
 						<p class="bold"><a href="{{ site.baseurl }}/website-design/">Website Design</a></p>
 						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</a></p>
 						<p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p>
@@ -43,7 +43,7 @@ permalink: /home/
 							<img class="circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
 						</a>
 					</div>
-					<div class="serviceText">
+					<div class="serviceText serviceSpace">
 						<p class="bold"><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Search Engine Optimization</a></p>
 						<!-- <p><a href="{{ site.baseurl }}/search-engine-optimization-seo/">Reach the top in search engines using organic SEO to increase traffic and generate more leads. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p> -->
 						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</a></p>
@@ -58,7 +58,7 @@ permalink: /home/
 							<img class="circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
 						</a>
 					</div>
-					<div class="serviceText">
+					<div class="serviceText serviceSpace">
 						<p class="bold"><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Pay-per-click Marketing</a></p>
 						<!-- <p><a href="{{ site.baseurl }}/pay-per-click-ppc-marketing/">Use social media marketing, email marketing and pay-per-click advertising to increase your leads. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi, ab dignissimos, ut asperiores, voluptate voluptates est eaque. Quisquam assumenda quis excepturi.</a></p> -->
 						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</a></p>
@@ -81,7 +81,7 @@ permalink: /home/
 							<img class="circular--square" src="{{ site.baseurl }}/images/professional.jpg">
 						<!-- </a> -->
 					</div>
-					<div class="serviceText">
+					<div class="serviceText serviceSpace">
 						<p class="bold">Professional</p>
 						<p>Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</p>
 						<!-- <p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p> -->
@@ -95,7 +95,7 @@ permalink: /home/
 							<img class="circular--square" src="{{ site.baseurl }}/images/local.jpg">
 						<!-- </a> -->
 					</div>
-					<div class="serviceText">
+					<div class="serviceText serviceSpace">
 						<p class="bold">Local</p>
 						<p>Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</p>
 						<!-- <p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p> -->
@@ -109,7 +109,7 @@ permalink: /home/
 							<img class="circular--square" src="{{ site.baseurl }}/images/results.jpg">
 						<!-- </a> -->
 					</div>
-					<div class="serviceText">
+					<div class="serviceText serviceSpace">
 						<p class="bold">Results</p>
 						<p>Your website is your company's first online impression, so make it the absolute best. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas fugit repellendus perspiciatis beatae quae porro minus incidunt sequi.</p>
 						<!-- <p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p> -->
